--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>Crispy Kitchen - Bootstrap 5 HTML Template</title>
+        <title>Crispy Kitchen</title>
 
         <!-- CSS FILES -->    
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -101,7 +101,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                                         </div>
                                     </div>
 
-                                    <p class="text-white w-100">From <strong>1,206+</strong> Customer Reviews</p>
+                                    <p class="text-white w-100">From <strong>2,206+</strong> Customer Reviews</p>
                                 </div>
                             </div>
                         </div>
