--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <meta name="description" content="">
         <meta name="author" content="">
 
-        <title>About Crispy Kitchen HTML Template</title>
+        <title>About Crispy Kitchen</title>
 
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -99,7 +99,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <div class="row">
 
                         <div class="col-lg-6 col-12 mb-2">
-                            <h4 class="mb-3">Crispy Kitchen is the latest Bootstrap 5 HTML template provided by Tooplate website.</h4>
+                            <h4 class="mb-3">Crispy Kitchen is a large place for customers </h4>
 
                             <a href="news.html" class="custom-btn btn btn-dark mt-3">Check out News</a>
 
