--- a/contact.html
+++ b/contact.html
@@ -207,7 +207,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                             <li><a href="#" class="social-icon-link bi-youtube"></a></li>
                         </ul>
                     
-                        <p class="copyright-text tooplate-mt60">Copyright © 2022 Crispy Kitchen Co., Ltd.
+                        <p class="copyright-text tooplate-mt60">Copyright © 2024 Crispy Kitchen by Liyab.
                         <br>Design: <a rel="nofollow" href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
                         
                     </div>
