--- a/news-detail.html
+++ b/news-detail.html
@@ -195,7 +195,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                                 <div class="news-text-info">
                                     <span class="category-tag me-3 bg-info">Promotions</span>
 
-                                    <strong>12 April 2022</strong>
+                                    <strong>12 May 2023</strong>
 
                                     <h5 class="news-title mt-2">
                                         <a href="news-detail.html" class="news-title-link">Is Coconut good for your health?</a>
@@ -213,7 +213,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                                 <div class="news-text-info">
                                     <span class="category-tag me-3 bg-info">Career</span>
 
-                                    <strong>18 April 2022</strong>
+                                    <strong>18 May 2023</strong>
 
                                     <h5 class="news-title mt-2">
                                         <a href="news-detail.html" class="news-title-link">How to run a sushi business?</a>
@@ -231,7 +231,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                                 <div class="news-text-info">
                                     <span class="category-tag me-3 bg-info">Meeting</span>
 
-                                    <strong>30 April 2022</strong>
+                                    <strong>30 May 2023</strong>
 
                                     <h5 class="news-title mt-2">
                                         <a href="news-detail.html" class="news-title-link">Learning a fine dining experience</a>
@@ -288,7 +288,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                     <div class="col-lg-4 col-md-7 col-xs-12 tooplate-mt30">
                         <h6 class="text-white mb-lg-4 mb-3">Location</h6>
 
-                        <p>121 Einstein Loop N, Bronx, NY 10475, United States</p>
+                        <p>Ashaley Botwe</p>
 
                         <a href="https://goo.gl/maps/wZVGLA7q64uC1s886" class="custom-btn btn btn-dark mt-2">Directions</a>
                     </div>
