--- a/news-detail.html
+++ b/news-detail.html
@@ -22,9 +22,9 @@
         <link href="css/tooplate-crispy-kitchen.css" rel="stylesheet">
 <!--
 
-Tooplate 2129 Crispy Kitchen
+ Crispy Kitchen
 
-https://www.tooplate.com/view/2129-crispy-kitchen
+https://github.com/12liyab-crispy-kitchen
 
 -->
     </head>
