--- a/news-detail.html
+++ b/news-detail.html
@@ -316,8 +316,8 @@ https://github.com/12liyab-crispy-kitchen
                             <li><a href="#" class="social-icon-link bi-youtube"></a></li>
                         </ul>
                     
-                        <p class="copyright-text tooplate-mt60">Copyright © 2022 Crispy Kitchen Co., Ltd.
-                        <br>Design: <a rel="nofollow" href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
+                        <p class="copyright-text tooplate-mt60">Copyright © 2024 Crispy Kitchen Co., Ltd.
+                        <br>Design: <a rel="nofollow" href="https://github.com/12liyab" target="_blank">Tooplate</a></p>
                         
                     </div>
 
