--- a/news-detail.html
+++ b/news-detail.html
@@ -117,7 +117,7 @@ https://github.com/12liyab-crispy-kitchen
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/6vebbDZxoKE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
-                                <p>Crispy Kitchen is free Bootstrap 5 HTML template provided by Tooplate. You are free to use this layout for commercial purposes. You are NOT allowed to redistribute the template ZIP file on any template donwnload website. Please <a href="https://www.tooplate.com/contact" target="_blank">contact us</a> for more information.</p>
+                                <p>Crispy Kitchen is free Bootstrap 5 HTML template provided by Liyab. You are free to use this layout for commercial purposes. You are NOT allowed to redistribute the template ZIP file on any template donwnload website. Please <a href="https://www.tooplate.com/contact" target="_blank">contact us</a> for more information.</p>
 
                                 <h5 class="mt-4 mb-3">Pasta with Cream Sauce Recipe</h5>
 
@@ -317,7 +317,7 @@ https://github.com/12liyab-crispy-kitchen
                         </ul>
                     
                         <p class="copyright-text tooplate-mt60">Copyright © 2024 Crispy Kitchen Co., Ltd.
-                        <br>Design: <a rel="nofollow" href="https://github.com/12liyab" target="_blank">Tooplate</a></p>
+                        <br>Design: <a rel="nofollow" href="https://github.com/12liyab" target="_blank">Liyab</a></p>
                         
                     </div>
 
