--- a/index.html
+++ b/index.html
@@ -538,8 +538,8 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                             <li><a href="#" class="social-icon-link bi-youtube"></a></li>
                         </ul>
                     
-                        <p class="copyright-text tooplate-mt60">Copyright © 2022 Crispy Kitchen Co., Ltd.
-                        <br>Design: <a rel="nofollow" href="https://www.tooplate.com/" target="_blank">Tooplate</a></p>
+                        <p class="copyright-text tooplate-mt60">Copyright © 2024 Crispy Kitchen Co., Ltd.
+                        <br>Design: <a rel="nofollow" href="https://www.tooplate.com/" target="_blank">Liyab</a></p>
                         
                     </div>
 
