--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         
 <!--
 
-Tooplate 2129 Crispy Kitchen
+ Crispy Kitchen
 
-https://www.tooplate.com/view/2129-crispy-kitchen
+https://github.com/12liyab/kitchen/index.html-crispy-kitchen
 
 -->
     </head>
