--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@ https://github.com/12liyab/kitchen/index.html-crispy-kitchen
                         </ul>
                     
                         <p class="copyright-text tooplate-mt60">Copyright © 2024 Crispy Kitchen Co., Ltd.
-                        <br>Design: <a rel="nofollow" href="https://www.tooplate.com/" target="_blank">Liyab</a></p>
+                        <br>Design: <a rel="nofollow" href="https://github.com/12liyab" target="_blank">Liyab</a></p>
                         
                     </div>
 
