--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <link href="css/tooplate-crispy-kitchen.css" rel="stylesheet">
 <!--
 
-Tooplate 2129 Crispy Kitchen
+ Crispy Kitchen
 
 https://www.tooplate.com/view/2129-crispy-kitchen
 
