--- a/news.html
+++ b/news.html
@@ -229,7 +229,7 @@ https://github.com/12liyab-crispy-kitchen
 
                         <p>10:00 AM - 08:00 PM</p>
 
-                        <p>Tel: <a href="tel: 010-02-0340" class="tel-link">233--</a></p>
+                        <p>Tel: <a href="tel: 010-02-0340" class="tel-link">233-054-</a></p>
                     </div>
 
                     <div class="col-lg-4 col-md-6 col-xs-12 tooplate-mt30">
