--- a/news.html
+++ b/news.html
@@ -245,7 +245,7 @@ https://github.com/12liyab-crispy-kitchen
                             <li><a href="#" class="social-icon-link bi-youtube"></a></li>
                         </ul>
                     
-                        <p class="copyright-text tooplate-mt60">Copyright © 2024  Kitchen Co., Ltd.
+                        <p class="copyright-text tooplate-mt60">Copyright © 2024 Crispy Kitchen Co., Ltd.
                         <br>Design: <a rel="nofollow" href="https://github.com/12liyab" target="_blank">Liyab</a></p>
                         
                     </div>
