--- a/news-detail.html
+++ b/news-detail.html
@@ -117,7 +117,7 @@ https://github.com/12liyab-crispy-kitchen
                                     <iframe width="560" height="315" src="https://www.youtube.com/embed/6vebbDZxoKE?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 </div>
 
-                                <p>Crispy Kitchen is   5 HTML template provided by Liyab. You are free to use this layout for commercial purposes. You are NOT allowed to redistribute the template ZIP file on any template donwnload website. Please <a href="https://www.tooplate.com/contact" target="_blank">contact us</a> for more information.</p>
+                                <p>Crispy Kitchen is a template provided by Liyab. You are free to use this layout for commercial purposes. You are NOT allowed to redistribute the template ZIP file on any template donwnload website. Please <a href="https://www.tooplate.com/contact" target="_blank">contact us</a> for more information.</p>
 
                                 <h5 class="mt-4 mb-3">Pasta with Cream Sauce Recipe</h5>
 
