--- a/contact.html
+++ b/contact.html
@@ -208,7 +208,7 @@ https://github.com/12liyab/kitchen-crispy-kitchen
                         </ul>
                     
                         <p class="copyright-text tooplate-mt60">Copyright © 2024 Crispy Kitchen by Liyab.
-                        <br>Design: <a rel="nofollow" href="https://www.tooplate.com" target="_blank">Liyab</a></p>
+                        <br>Design: <a rel="nofollow" href="https://www.tooplate.co" target="_blank">Liyab</a></p>
                         
                     </div>
 
